[Misc] Refactor to use the newly introduced steps instead of Utils.groovy